Fixed Header, Pictures Work, Links Work
Header conforms mostly to style set by Canva, User button not centered
only dummy links used
No functunality of switches etc yet

--- a/src/app/footer/footer.component.css
+++ b/src/app/footer/footer.component.css
@@ -10,3 +10,11 @@ footer{
 ul {
     list-style-type: none; 
 }
+
+
+.styledSVG{
+    width: 85%;
+    height: auto;
+    text-decoration: none;
+    
+}
